force-app/main/default/objects/Product2/fields/CPQ_NewField_1__c.field-meta.xml
<CustomField>
    <fullName>CPQ_NewField_1__c</fullName>
    <label>CPQ_NewField_1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>