force-app/main/default/objects/Product2/fields/ProductTest123__c.field-meta.xml
<CustomField>
    <fullName>ProductTest123__c</fullName>
    <label>ProductTest123</label>
    <length>25</length>
    <type>Text</type>
</CustomField>