force-app/main/default/objects/Product2/fields/ProductTestrXYZ__c.field-meta.xml
<CustomField>
    <fullName>ProductTestrXYZ__c</fullName>
    <label>ProductTestrXYZ</label>
    <length>25</length>
    <type>Text</type>
</CustomField>