force-app/main/default/objects/Product2/fields/Test_Delete_2__c.field-meta.xml
<CustomField>
    <fullName>Test_Delete_2__c</fullName>
    <label>Test Delete 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>